# sensor_logger_sim

./: CMakeLists.txt  Doxyfile  README.md
include/: logger.hpp  sensor.hpp  simulator.hpp
src/: logger.cpp  main.cpp  sensor.cpp  simulator.cpp
